--- a/webapp/view/Main.view.xml
+++ b/webapp/view/Main.view.xml
@@ -4,6 +4,7 @@
     <Page id="page" title="{i18n>title}">
         <content>
             <Button text="Say Hello" press=".onShowHello"/>
+            <Input value="{/recipient/name}" description="Hello {/recipient/name}" valueLiveUpdate="true" width="60%"/>
         </content>
     </Page>
 </mvc:View>
