--- a/webapp/view/Main.view.xml
+++ b/webapp/view/Main.view.xml
@@ -3,7 +3,7 @@
     xmlns="sap.m">
     <Page id="page" title="{i18n>title}">
         <content>
-            <Button text="Say Hello" press=".onShowHello"/>
+            <Button text="{i18n>showHelloButtonText}" press=".onShowHello"/>
             <Input value="{/recipient/name}" description="Hello {/recipient/name}" valueLiveUpdate="true" width="60%"/>
         </content>
     </Page>
